--- a/CSS/fuente-g.css
+++ b/CSS/fuente-g.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 20%;
+    /*ffsdjfsdjf*/
 }
 .cinzel-font{
     font-family: 'Cinzel', serif;
