--- a/CSS/fuentes.css
+++ b/CSS/fuentes.css
@@ -1,24 +1,35 @@
-.courier-font{
-    font-family: 'Courier New', Courier, monospace;
-}
-.cinzel-font{
-    font-family: 'Cinzel', serif;
-    font-weight: 600;
+*{
+    margin: 0;
+    padding: 0;
+    background-color: beige;
 }
 
-/* cinzel-600 - latin */
-@font-face {
-    font-family: 'Cinzel';
+h1{
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    padding-top: 15%;
+}
+
+ul{
+    text-align: center;
+    justify-content: center;
+}
+
+.fuente-G{
+    font-family: 'Cinzel', serif;
+}
+.fuente-N{
+    font-family: 'Bebas Neue';
+    font-size: 1.2em;
+}
+
+.fuente-D{
+    font-family: 'WaltographRegular';
+    font-weight: normal;
     font-style: normal;
-    font-weight: 600;
-    src: url('../fonts/cinzel-v19-latin-600.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/cinzel-v19-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/cinzel-v19-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/cinzel-v19-latin-600.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/cinzel-v19-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/cinzel-v19-latin-600.svg#Cinzel') format('svg'); /* Legacy iOS */
-  }
+    font-size: 1.4em;
+ }
+
 /* cinzel-700 - latin */
 @font-face {
     font-family: 'Cinzel';
@@ -31,4 +42,18 @@
          url('../fonts/cinzel-v19-latin-700.woff') format('woff'), /* Modern Browsers */
          url('../fonts/cinzel-v19-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/cinzel-v19-latin-700.svg#Cinzel') format('svg'); /* Legacy iOS */
+  }
+
+  /* bebas-neue-regular - latin */
+@font-face {
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/bebas-neue-v9-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/bebas-neue-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/bebas-neue-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/bebas-neue-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/bebas-neue-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/bebas-neue-v9-latin-regular.svg#BebasNeue') format('svg'); /* Legacy iOS */
   }
