--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,52 @@
 /*Estilo utilizando elementos html*/
 /*Selector de elemento*/
+*{
+    background-color: rgb(213, 188, 159);
+}
+
 h1{
     /*Propiedades*/
     text-align: center;
+    font-family: 'Anton';
+    font-size: 5em;
+    background-color: rgb(207, 78, 78);
+    margin-bottom: 0;
 }
 /*Selector de clase*/
 .fuente-nombre{
     text-align: center;
+    font-family: 'Courgette';
+    font-size: 3em;
     color:maroon
 }
 li.fuente-especial {
     color:red;
 }
+
+/* anton-regular - latin */
+@font-face {
+    font-family: 'Anton';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/anton-v23-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/anton-v23-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/anton-v23-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/anton-v23-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/anton-v23-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/anton-v23-latin-regular.svg#Anton') format('svg'); /* Legacy iOS */
+  }
+
+  /* courgette-regular - latin */
+@font-face {
+    font-family: 'Courgette';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/courgette-v13-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/courgette-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/courgette-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/courgette-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/courgette-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/courgette-v13-latin-regular.svg#Courgette') format('svg'); /* Legacy iOS */
+  }
