--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,10 @@ h1{
     text-align: center;
     font-family: 'Courgette';
     font-size: 3em;
+    margin-top: 0;
+    background-color: rgb(180, 150, 77);
     color:maroon
+    
 }
 li.fuente-especial {
     color:red;
