Repositorio cambio nombe, añadido pagina de colores

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,6 +26,13 @@ li.fuente-especial {
     color:red;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    color: blue;
+}
 /* anton-regular - latin */
 @font-face {
     font-family: 'Anton';
