--- a/CSS/bordes.css
+++ b/CSS/bordes.css
@@ -1,29 +1,117 @@
 body{
+    background-color: rgb(211, 211, 187);
+}
+
+.cajas-bordes{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
 .box-1{
     display: flex;
-    border: 4px solid black;
-    background-color: cyan;
-    height: 400px;
-    width: 400px;
-    justify-content: center;
+    border: 6px solid rgb(2, 172, 172);
+    background-color: #066;
+    height: 300px;
+    width: 200px;
     align-items: center;
+    margin-right: 10px;
 }
 
-.paragraph{
-    font-size: 2.5em;
-    margin-left: 150px;
-    margin-right: 200px;
-    text-align: center;
-    border: 3px solid red;
+.box-2{
+    display: flex;
+    border: 6px dotted black;
+    background-color: #063;
+    height: 300px;
+    width: 200px;
+    align-items: center;
+    margin-right: 10px;
 }
 
-.bordes{
-    font-size: 40px;
+.box-3{
+    display: flex;
+    border: 6px dashed black;
+    background-color: #306;
+    height: 300px;
+    width: 200px;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.box-4{
+    display: flex;
+    border: 6px double white;
+    background-color: #404040;
+    height: 300px;
+    width: 200px;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.box-5{
+    display: flex;
+    border: 6px groove black;
+    background-color: #60c;
+    height: 300px;
+    width: 200px;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.solid{
+    font-size: 20px;
+    padding: 20px;
+    text-align: right;
+    color: white;
+}
+
+.dotted{
+    font-size: 20px;
+    padding: 20px;
+    text-align: justify;
+    color: white;
+}
+
+.dashed{
+    font-size: 20px;
+    padding: 20px;
     text-align: center;
+    color: white;
+}
+
+.double{
+    font-size: 20px;
+    padding: 20px;
+    text-align: justify;
+    color: white;
+}
+
+.groove{
+    font-size: 20px;
+    padding: 20px;
+    text-align: left;
+    color: white;
+}
+
+.p1{
+    padding: 50px;
+    font-size: 30px;
+    text-align: left;
+    border: 5px ridge rgb(202, 106, 106);
+    margin: 0;
+}
+
+.p2{
+    font-size: 30px;
+    text-align: center;
+    border: 5px inset white;
+    margin: 0;
+}
+.p3{
+    padding: 30px;
+    font-size: 30px;
+    text-align: right;
+    border: 5px outset white;
+    margin: 25px;
 }
