--- a/CSS/imagenes.css
+++ b/CSS/imagenes.css
@@ -1,4 +1,26 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
+    margin: 1px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+}
+
+h1, h2, p{
+    text-align: center;
+}
+
+.box-1, .box-2, .box-3{
+    width: 33%;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-1, .img-2, .img-3{
+    width: 100%;
+    height: 100%;
 }
