--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -14,13 +14,15 @@ h1, h2, p{
 }
 
 .box-1, .box-2, .box-3{
-    width: 33%;
+    width: 30%;
     display: inline-block;
     justify-content: center;
     align-items: center;
+    margin: 10px
 }
 
 .img-1, .img-2, .img-3{
     width: 100%;
-    height: 100%;
+    margin: 10px
 }
+
