--- a/CSS/box-shadow.css
+++ b/CSS/box-shadow.css
@@ -2,68 +2,56 @@ h1{
     text-align: center;
 }
 
-.contenedor-padre{
+div{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
+.contenedor-padre{
+    flex-wrap: wrap;
+}
+
 .box-1{
-    display: flex;
     width: 200px;
     height: 200px;
     background-color: blue;
     box-shadow: 10px 10px;
     margin: 15px;
-    align-items: center;
-    justify-content: center;
     border-radius: 15px;
 }
 
 .box-2{
-    display: flex;
     width: 200px;
     height: 200px;
     background-color: blueviolet;
     box-shadow: 15px 15px 5px;
     margin: 15px;
-    align-items: center;
-    justify-content: center;
     border-radius: 15px;
 }
 
 .box-3{
-    display: flex;
     width: 200px;
     height: 200px;
     background-color: lawngreen;
     box-shadow: 15px 15px 5px gold;
     margin: 15px;
-    align-items: center;
-    justify-content: center;
     border-radius: 15px;
 }
 
 .box-4{
-    display: flex;
     width: 200px;
     height: 200px;
     background-color: darkmagenta;
     box-shadow: 15px 15px 25px fuchsia inset;
     margin: 15px;
-    align-items: center;
-    justify-content: center;
     border-radius: 15px;
 }
 .box-5{
-    display: flex;
     width: 200px;
     height: 200px;
     background-color: green;
     margin: 15px;
-    align-items: center;
-    justify-content: center;
     border-radius: 15px;
 }
 
