--- a/CSS/box-shadow.css
+++ b/CSS/box-shadow.css
@@ -9,6 +9,10 @@ div{
 }
 
 .contenedor-padre{
+    flex-direction: column;
+}
+
+.padre1, .padre2, .padre3{
     flex-wrap: wrap;
 }
 
@@ -55,6 +59,17 @@ div{
     border-radius: 15px;
 }
 
+.box-6{
+    width: 200px;
+    height: 200px;
+    background-color: navy;
+    margin: 15px;
+    border-radius: 15px;
+}
+
+.box-6:hover{box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px;
+}
+
 .box-5:hover{
     cursor: pointer;
     box-shadow: 5px 5px 5px indigo, -5px 5px 5px indigo, 0px -5px 5px indigo;
@@ -62,6 +77,7 @@ div{
 
 p{
     color: wheat;
+    text-align: center;
 }
 
 .p-3{
