--- a/CSS/icon2.css
+++ b/CSS/icon2.css
@@ -10,3 +10,31 @@
 nav{
     font-family: 'TT Hoves Hairline';
 }
+
+body{
+    display: flex
+}
+
+.texto{
+    margin-left: 260px;
+    box-sizing: border-box;
+    padding: 25px;
+}
+
+.menu-general{
+    box-shadow: 0px 0px 10px;
+}
+
+ul{
+   list-style: none;
+   padding: 0;
+}
+
+li, span{
+    padding: 10px;
+    text-decoration: none;
+}
+
+li:hover{
+    background-color: gainsboro;
+}
