--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,14 +21,81 @@ ul{
     height: 85px;
     margin-right: 200px;
     padding: 15px;
+    padding-right: 45px;
+    position: fixed;
+    top: 0;
 }
 
 .listtopmenu a{
     text-decoration: none;
     color: white;
-    font-size: 20px;
+    font-size: 25px;
     padding: 15px;
-    font-family: "Crimson Text", serif;
+    padding-left: 50px;
+    font-family: 'Crimson Text', serif;
+}
+
+.contact{
+  display: flex;
+  flex-direction: column-reverse;
+  width: 10%;
+  height: 95vh;
+  position: fixed;
+  align-items: center;
+  top: 0;
+}
+
+.fa-brands{
+  color:antiquewhite;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.line{
+  width: 1px;
+  height: 20vh;
+  background-color: aliceblue;
+}
+
+.home{
+  height: 80vh;
+  margin-top: 100px;
+  margin-left: 12%;
+  margin-right: 10%;
+  background-color: gray;
+}
+
+.about{
+  height: 80vh;
+  margin-top: 25px;
+  margin-left: 12%;
+  margin-right: 10%;
+  background-color: gray;
+}
+
+.skills{
+  height: 80vh;
+  margin-top: 25px;
+  margin-left: 12%;
+  margin-right: 10%;
+  background-color: gray;
+}
+
+.work{
+  height: 80vh;
+  margin-top: 25px;
+  margin-left: 12%;
+  margin-right: 10%;
+  background-color: gray;
+}
+
+.contacts{
+  height: 80vh;
+  margin-top: 25px;
+  margin-left: 12%;
+  margin-right: 10%;
+  margin-bottom: 5vh;
+  background-color: gray;
 }
 
 /* anton-regular - latin */
@@ -57,86 +124,4 @@ ul{
          url('../fonts/courgette-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
          url('../fonts/courgette-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/courgette-v13-latin-regular.svg#Courgette') format('svg'); /* Legacy iOS */
-  }
-
-  /* vietnamese */
-@font-face {
-    font-family: 'Crimson Text';
-    font-style: italic;
-    font-weight: 600;
-    font-display: swap;
-    src: url('../fonts/wlprgwHKFkZgtmSR3NB0oRJfajCOD-Nd_LV_fg.woff2') format('woff2');
-    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-  }
-  /* latin-ext */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: italic;
-    font-weight: 600;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlprgwHKFkZgtmSR3NB0oRJfajCOD-Nc_LV_fg.woff2) format('woff2');
-    unicode-range: U+0100-02AF, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: italic;
-    font-weight: 600;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlprgwHKFkZgtmSR3NB0oRJfajCOD-NS_LU.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-  /* vietnamese */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: italic;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlprgwHKFkZgtmSR3NB0oRJfajDqDuNd_LV_fg.woff2) format('woff2');
-    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-  }
-  /* latin-ext */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: italic;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlprgwHKFkZgtmSR3NB0oRJfajDqDuNc_LV_fg.woff2) format('woff2');
-    unicode-range: U+0100-02AF, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: italic;
-    font-weight: 700;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlprgwHKFkZgtmSR3NB0oRJfajDqDuNS_LU.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-  /* vietnamese */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: normal;
-    font-weight: 600;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlppgwHKFkZgtmSR3NB0oRJXsCxGA9NQ5LE.woff2) format('woff2');
-    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-  }
-  /* latin-ext */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: normal;
-    font-weight: 600;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlppgwHKFkZgtmSR3NB0oRJXsCxGAtNQ5LE.woff2) format('woff2');
-    unicode-range: U+0100-02AF, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'Crimson Text';
-    font-style: normal;
-    font-weight: 600;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlppgwHKFkZgtmSR3NB0oRJXsCxGDNNQ.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
