--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,11 +67,15 @@ ul{
 }
 
 .about{
-  display: flex;
   margin-top: 25px;
   margin-left: 12%;
   margin-right: 10%;
   padding-top: 100px;
+}
+
+.lalala{
+  display: flex;
+  padding-top: 15px;
 }
 
 .presentation{
@@ -101,6 +105,7 @@ ul{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-top: 25px;
 }
 
 .box-icon{
@@ -117,8 +122,6 @@ ul{
 }
 
 .work{
-  display: flex;
-  flex-wrap: wrap;
   height: auto;
   margin-top: 25px;
   margin-left: 12%;
@@ -127,21 +130,73 @@ ul{
   justify-content: center;
 }
 
+.work2{
+  padding-top: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .lesson-work{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 25%;
+  width: 23%;
+  margin: 1%;
   height: 200px;
 }
 
-.work .img{
+.img1, .img2, .img3, .img4, .img5, .img6, .img7, .img8, .img9, .img10{
   display: flex;
-  width: 220px;
   height: 165px;
-  background-color: aquamarine;
+  background-size: cover;
   justify-content: center;
   align-items: center;
+}
+
+.img1{
+  background-image: url('../images/foto1.PNG');
+}
+
+.img2{
+  background-image: url('../images/photo2.PNG');
+}
+
+.img3{
+  background-image: url('../images/photo3.PNG');
+}
+
+.img4{
+  background-image: url('../images/photo4.PNG');
+}
+
+.img5{
+  background-image: url('../images/photo5.PNG');
+}
+
+.img6{
+  background-image: url('../images/photo6.PNG');
+}
+
+.img7{
+  background-image: url('../images/photo7.PNG');
+}
+
+.img8{
+  background-image: url('../images/photo8.PNG');
+}
+
+.img9{
+  background-image: url('../images/photo9.PNG');
+}
+
+.img10{
+  background-image: url('../images/photo10.PNG');
+}
+
+.lesson-work:hover{
+  transform: scale(1.2);
+  box-shadow: rgba(255, 255, 255, 0.3) 0px 19px 38px, rgba(255, 255, 255, 0.22) 0px 15px 12px;
 }
 
 a{
@@ -150,16 +205,61 @@ a{
 
 span{
   color: yellow;
+  text-align: center;
+}
+
+.pspan{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 86px;
+  background-color:#950101;
+  height: 86px;
+  border-radius: 43px;
 }
 
 .contacts{
-  height: 80vh;
   margin-top: 25px;
   margin-left: 12%;
   margin-right: 10%;
   margin-bottom: 5vh;
   padding-top: 100px;
-  background-color: gray;
+}
+
+.title-skill{
+  display: flex;
+  align-items: center;
+}
+
+h2{
+  color: aliceblue;
+  padding-right: 20px;
+}
+
+.line-skill{
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 1px;
+  background-color: aliceblue;
+}
+
+.icon-contact{
+  display: flex;
+  justify-content: center;
+  padding: 30px;
+}
+
+.uno, .dos, .tres, .cuatro, .cinco{
+  font-size: 3.5em;
+  padding: 40px;
+}
+
+.contact-bottom{
+  color: aliceblue;
+  text-align: center;
+  padding: 10px;
+  font-size: 1.3em;
 }
 
 /* anton-regular - latin */
