--- a/CSS/mediaQuery.css
+++ b/CSS/mediaQuery.css
@@ -7,58 +7,50 @@
 .menu-hamburger{
     display: none;
 }
+
 .menu{
     width: 100%;
     padding: 0 20px;
-}
-
-.main-menu{
-    margin-right: 20px;
-    margin-left: 20px;
-    height: 80px;
-    text-align: right;
+    cursor: pointer;
     list-style: none;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    padding-right: 10px;
-}
-
-.item-menu{
-    display: inline-block;
-    color:   rgb(64, 64, 64,.9);;
-    font-size: 1em;
-    margin-left: 30px;
-    margin-top: 30px;
-    margin-right: 20px;
+    height: 80px;
     font-family: Tahoma, Geneva, Verdana, sans-serif;
+    text-align: right;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.item{
+    display: inline-block;
+    color:   rgb(64, 64, 64,.9);
+    font-size: 1em;
+    padding: 20px;
+}
+label{
+    height: 80px;
+}
 @media only screen and (max-width: 700px){
-    .menu-hamburger{
+    .menu{
+        background-color: rgb(64, 64, 64,.8);
+    }
+    
+    .main-menu{
+        display: none;
+    }
+
+    .item{
         display: block;
+        color: white;
+        border-bottom: 1px solid whitesmoke;
+        background-color: rgb(64, 64, 64,.8);
+        text-align: center;
+    }
+
+    .menu-hamburger{
+        display: inline-block;
         color: white;
         font-size: 1.7em;
         margin-left: 25px;
         padding: 25px;
         padding-left: 5px;
-    }
-
-    .menu{
-        background-color: rgb(64, 64, 64,.8);
-    }
-
-    .item-menu{
-        display: block;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        color: white;
-        border-bottom: 1px solid whitesmoke;
-    }
-
-    .main-menu{
-        padding-top: 10px;
-        border: none;
-        text-align: center;
-        background-color: rgb(64, 64, 64,.8);
-        height: 100vh;
     }
 }
