--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url('../images/fondo2.jpeg');
+    background-image: url('../images/fonfo3.jpg');
     width: 100%;
     background-size: cover;
 }
@@ -230,7 +230,7 @@ img{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 23%;
+  width: 20%;
   margin: 1%;
   border: 1px solid white;
   border-radius: 20% 0;
@@ -320,4 +320,28 @@ h2{
          url('../fonts/courgette-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
          url('../fonts/courgette-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/courgette-v13-latin-regular.svg#Courgette') format('svg'); /* Legacy iOS */
+  }
+
+  @media only screen and (max-width: 1700px){
+    .lesson-work1{
+      width: 23%;
+    }
+  }
+
+  @media only screen and (max-width: 1200px){
+    .lesson-work1{
+      width: 30%;
+    }
+  }
+
+  @media only screen and (max-width: 850px){
+    .lesson-work1{
+      width: 46%;
+    }
+  }
+
+  @media only screen and (max-width: 500px){
+    .lesson-work1{
+      width: 98%;
+    }
   }
