--- a/CSS/style.css
+++ b/CSS/style.css
@@ -165,7 +165,7 @@ img{
   justify-content: center;
 }
 
-.img1, .img2, .img3, .img4, .img5, .img6, .img7, .img8, .img9, .img10, .img11, .img12, .img13{
+.img1, .img2, .img3, .img4, .img5, .img6, .img7, .img8, .img9, .img10, .img11, .img12, .img13, .img14{
   height: 165px;
   background-size: cover;
   background-position: center;
@@ -222,6 +222,10 @@ img{
 }
 
 .img13{
+  color: white;
+}
+
+.img14{
   color: white;
 }
 
@@ -337,6 +341,12 @@ h2{
   @media only screen and (max-width: 850px){
     .lesson-work1{
       width: 46%;
+    }
+  }
+
+  @media only screen and (max-width: 620px){
+    .contact{
+      display: none;
     }
   }
 
