--- a/CSS/maquetacion.css
+++ b/CSS/maquetacion.css
@@ -11,7 +11,7 @@ nav{
 .main-img-box{
     height: 500px;
     width: 100%;
-    background-color: darkcyan;
+    background-image: url("../images/programacionPrincipal.jpg");
     color: aliceblue;
     display: flex;
     align-items: center;
@@ -36,24 +36,59 @@ nav{
     grid-area: article-1;
 }
 
+.article-1 .img-article{
+    background-image: url("../images/C++.jpg");
+    background-size: cover;
+}
+
 .article-2{
     grid-area: article-2;
+}
+
+.article-2 .img-article{
+    background-image: url("../images/html.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 .article-3{
     grid-area: article-3;
 }
 
+.article-3 .img-article{
+    background-image: url("../images/JS.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
 .article-4{
     grid-area: article-4;
+}
+
+.article-4 .img-article{
+    background-image: url("../images/PYTHON.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 .article-5{
     grid-area: article-5;
 }
 
+.article-5 .img-article{
+    background-image: url("../images/CSS.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
 .article-6{
     grid-area: article-6;
+}
+
+.article-6 .img-article{
+    background-image: url("../images/JAVA.jpeg");
+    background-size: cover;
+    background-position: center;
 }
 
 .img-article{
@@ -66,7 +101,7 @@ nav{
 .text-content{
     color: black;
     font-size: 1.2em;
-    line-height: 1.4em;
+    line-height: 1.6em;
     text-align: justify;
     padding: 10px;
 }
