--- a/CSS/maquetacion.css
+++ b/CSS/maquetacion.css
@@ -4,14 +4,38 @@
     font-family: 'Gill Sans', sans-serif;
 }
 
-nav{
-    height: 80px;
+.menu-hamburger{
+    display: none;
+}
+
+.menu{
+    width: 100%;
+    padding: 0 20px;
+    cursor: pointer;
+    list-style: none;
+    height: 60px;
+    font-family: Tahoma, Geneva, Verdana, sans-serif;
+    text-align: right;
+    background-color: rgb(9,12,66);
+    box-sizing: border-box;
+    color: aliceblue;
+}
+
+.item{
+    display: inline-block;
+    font-size: 1em;
+    padding: 20px;
+}
+
+label{
+    height: 60px;
 }
 
 .main-img-box{
     height: 500px;
     width: 100%;
     background-image: url("../images/programacionPrincipal.jpg");
+    background-position: right;
     color: aliceblue;
     display: flex;
     align-items: center;
@@ -164,6 +188,36 @@ nav{
     }
     .img-article{
         height: 320px;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .menu{
+        background-color: rgb(9,12,66);
+        height: auto;
+    }
+    
+    .main-menu{
+        display: none;
+    }
+
+    .item{
+        display: block;
+        color: white;
+        border-bottom: 1px solid whitesmoke;
+        background-color: rgb(9,12,66);
+        text-align: center;
+    }
+
+    .menu-hamburger{
+        display: inline-block;
+        color: white;
+        font-size: 1.7em;
+        margin-left: 25px;
+        padding: 20px;
+        padding-top: 10px;
+        padding-left: 5px;
+        box-sizing: border-box;
     }
 }
 
