--- a/CSS/carrito.css
+++ b/CSS/carrito.css
@@ -11,6 +11,7 @@ body {
 
 .principal{
     width: 95%;
+    max-width: 800px;
     height: auto;
     margin: 20px auto;
     background-color: #fff;
@@ -44,7 +45,7 @@ body {
 }
 
 img{
-    width: 100%;
+    width: 80%;
     border-radius: 5px;
 }
 
@@ -66,7 +67,7 @@ h3{
 .acciones{
     grid-area: acciones;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -121,7 +122,7 @@ h3{
     background-color: #c82333;
 }
 
-@media (min-width:361px){
+@media (min-width:431px){
     .principal{
         grid-template: "totalPagar totalPagar" auto
                         "totalProducto totalProducto" auto
