--- a/CSS/mercadolibre2.css
+++ b/CSS/mercadolibre2.css
@@ -2,11 +2,13 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
     height: 50px;
     display: grid;
+    margin-bottom: 15px;
     background-color: #faf25c;
     grid-template: "logo input-busqueda menu-hamburguesa carrito" /
                     70px 1fr            50px             50px;
@@ -64,8 +66,7 @@ header {
 
 .main-content {
     display: grid;
-    height: 30px;
-
+    height: auto;
 }
 
 .box-producto {
@@ -73,7 +74,7 @@ header {
     grid-template: "box-img box-info" /
                     3fr     4fr
     ;
-    height: 300px;
+    height: auto;
 }
 
 .box-img {
@@ -81,14 +82,48 @@ header {
     align-items: 'center';
     justify-content: 'center';
     grid-area: box-img;
-    background-color: darkcyan;
 }
 
 .box-info {
     grid-area: box-info;
-    background-color: blueviolet;
 }
 
 .img-auto{
     width: 100%;
+    padding: 10px;
+}
+
+.marca{
+    display: block;
+    font-size: 14px;
+    padding: 3px;
+}
+
+.precio{
+    display: block;
+    font-size: 20px;
+    padding: 3px;
+}
+
+.infExt{
+    display: block;
+    font-size: 12px;
+    color: #00000073;
+    padding: 3px;
+}
+
+.icon-corazon{
+    display: flex;
+    width: 30px;
+    height: 35px;
+    color: rgba(56, 125, 236, 0.8);
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(250,250,250,.9);
+    border-radius: 50%;
+    font-size: 17px;
+    position: relative;
+    bottom: 78%;
+    left: 70%;
+    padding: 2px;
 }
