--- a/CSS/mercadolibre2.css
+++ b/CSS/mercadolibre2.css
@@ -130,9 +130,9 @@ header {
 }
 
 @media only screen and (min-width: 500px){
-    .box-producto{
+    /* .box-producto{
         grid-area: boxProducto;
-    }
+    } */
 
     .left{
         grid-area: leftA;
