--- a/CSS/mercadolibre2.css
+++ b/CSS/mercadolibre2.css
@@ -167,6 +167,15 @@ header {
     left: 63px;
 }
 
+.filtros-visible{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
+}
+
 @media only screen and (min-width: 500px){
     /* .box-producto{
         grid-area: boxProducto;
